# RHD

./: Cargo.toml  README.md  README.md.backup  configuration.yaml  p
scripts/: init_db.sh
src/: cli_parse.rs  configuration.rs  db_logic.rs  helpers.rs  lib.rs  main.rs  write_logic.rs
