[package]
name = "RHD"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "RHD"

[dependencies]
serde = {version = "1", features = ["derive"]} 
postgres = "0.19.1"
config = "0.11.0"
clap = "2.33.3"
