[package]
edition = "2018"
name = "RHD"
version = "0.1.0"
[[bin]]
name = "RHD"
path = "./src/main.rs"

[dependencies]
clap = "2.33.3"
config = "0.11.0"
postgres = "0.19.1"
url = "2.2.2"
regex = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[lib]
clap = "2.33.3"
config = "0.11.0"
path = "./src/lib.rs"
postgres = "0.19.1"
